--- a/webD8/Header/Header.html
+++ b/webD8/Header/Header.html
@@ -16,8 +16,8 @@
             <h1 class="collegename">Sri Vaishnavi Educational Institute</h1>
         </div>
         <nav class="directlinks">
-            <a href="../Aboutus/AboutUS.html">AboutUs</a>
-            <a href="../Courses/courses.html">Courses</a>
+            <a href="../Aboutus/AboutUs.html">AboutUs</a>
+            <a href="../Courses/Courses.html">Courses</a>
             <a href="../Courses/courses.html">ContactUs</a>     
         </nav>
     </div>
