--- a/webD8/Courses/Courses.html
+++ b/webD8/Courses/Courses.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Courses</title>
     <link rel="stylesheet" href="../Header/Header.css">
-    <link rel="stylesheet" href="../Courses/courses.css">
+    <link rel="stylesheet" href="../Courses/Courses.css">
 </head>
 <body>
     <div class="heading">
