--- a/webD8/Aboutus/AboutUs.html
+++ b/webD8/Aboutus/AboutUs.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AboutUs</title>
-    <link rel="stylesheet" href="./AboutUS.css">
+    <link rel="stylesheet" href="./AboutUs.css">
     <link rel="stylesheet" href="../Header/Header.css">
 </head>
 <body>
